# mpz

./: Cargo.toml  README.md
.github/workflows/: rebase.yml  rust.yml
crates/: Cargo.toml
crates/mpz-binary-types/: Cargo.toml
crates/mpz-binary-types/src/: collections.rs  lib.rs  primitive.rs
crates/mpz-circuits/: Cargo.toml
crates/mpz-circuits-generic/: Cargo.toml
crates/mpz-circuits-generic/src/: circuit.rs  lib.rs  model.rs
crates/mpz-circuits-macros/src/: evaluate.rs  lib.rs  trace.rs
crates/mpz-circuits/benches/: sha256.rs
crates/mpz-circuits/src/: builder.rs  circuit.rs  components.rs  lib.rs  parse.rs  repr.rs  tracer.rs
crates/mpz-circuits/src/circuits/: big_num.rs  mod.rs
crates/mpz-circuits/src/components/: binary.rs
crates/mpz-circuits/src/ops/: binary.rs  uint.rs
crates/mpz-cointoss/: Cargo.toml
crates/mpz-common/: Cargo.toml
crates/mpz-common/benches/: context.rs
crates/mpz-common/src/: context.rs  cpu.rs  id.rs  ideal.rs  lib.rs  queue.rs
crates/mpz-common/src/executor/: dummy.rs  mod.rs  mt.rs  st.rs
crates/mpz-common/src/queue/: round_robin.rs  simple.rs
crates/mpz-common/src/sync/: async_mutex.rs  async_syncer.rs  mod.rs  mutex.rs
crates/mpz-core/: Cargo.toml
crates/mpz-core/benches/: prg.rs
crates/mpz-core/examples/: lpn_estimator.rs
crates/mpz-core/src/: block.rs  ggm_tree.rs  lib.rs  lpn_estimator.rs  prg.rs
crates/mpz-dynamic-types/: Cargo.toml
crates/mpz-dynamic-types/src/: composite.rs  lib.rs  primitive.rs  repr.rs
crates/mpz-dynamic-types/src/composite/: array.rs
crates/mpz-dynamic-types/src/primitive/: binary.rs
crates/mpz-dynamic-types/src/repr/: binary.rs
crates/mpz-fields/: Cargo.toml
crates/mpz-fields/src/: gf2_128.rs  lib.rs  p256.rs
crates/mpz-garble/: Cargo.toml
crates/mpz-garble-binary/: Cargo.toml
crates/mpz-garble-binary/src/: arithmetic.rs  encoding.rs  lib.rs
crates/mpz-garble-core/: Cargo.toml
crates/mpz-garble-core/benches/: garble.rs
crates/mpz-garble-core/src/: circuit.rs  evaluator.rs  generator.rs  lib.rs  msg.rs
crates/mpz-garble-core/src/encoding/: mod.rs
crates/mpz-garble/benches/: deap.rs
crates/mpz-garble/src/: config.rs  lib.rs  memory.rs  ot.rs  threadpool.rs
crates/mpz-garble/src/evaluator/: error.rs  mod.rs
crates/mpz-garble/src/generator/: config.rs  error.rs  mod.rs
crates/mpz-garble/src/protocol/deap/: error.rs  mock.rs  mod.rs  vm.rs
crates/mpz-garble/tests/: offline-garble.rs  semihonest.rs
crates/mpz-memory/: Cargo.toml
crates/mpz-memory/src/: lib.rs  repr.rs
crates/mpz-memory/src/repr/: binary.rs
crates/mpz-ole/: Cargo.toml
crates/mpz-ole-core/: Cargo.toml
crates/mpz-ole-core/src/: ideal.rs  lib.rs  msg.rs  receiver.rs  sender.rs
crates/mpz-ole-core/src/core/: mod.rs  receiver.rs  sender.rs
crates/mpz-ole/src/: ideal.rs  lib.rs
crates/mpz-ole/src/rot/: mod.rs  receiver.rs  sender.rs
crates/mpz-ot/: Cargo.toml
crates/mpz-ot-core/: Cargo.toml
crates/mpz-ot-core/src/: lib.rs  msgs.rs  test.rs
crates/mpz-ot-core/src/chou_orlandi/: error.rs  msgs.rs  receiver.rs  sender.rs
crates/mpz-ot-core/src/ferret/: mod.rs  msgs.rs  receiver.rs  sender.rs
crates/mpz-ot-core/src/ferret/mpcot/: mod.rs  receiver.rs  receiver_regular.rs  sender.rs  sender_regular.rs
crates/mpz-ot-core/src/ferret/spcot/: mod.rs  receiver.rs  sender.rs
crates/mpz-ot-core/src/ideal/: cot.rs  mod.rs  mpcot.rs  ot.rs  rot.rs  spcot.rs
crates/mpz-ot-core/src/kos/: error.rs  mod.rs  msgs.rs  receiver.rs  sender.rs
crates/mpz-ot/src/: lib.rs
crates/mpz-ot/src/chou_orlandi/: mod.rs  receiver.rs  sender.rs
crates/mpz-ot/src/ferret/: error.rs  mod.rs  mpcot.rs  receiver.rs  sender.rs  spcot.rs
crates/mpz-ot/src/ferret/mpcot/: error.rs  mod.rs  receiver.rs  sender.rs
crates/mpz-ot/src/ferret/spcot/: error.rs  mod.rs  receiver.rs  sender.rs
crates/mpz-ot/src/ideal/: cot.rs  mod.rs  ot.rs  rot.rs
crates/mpz-ot/src/kos/: mod.rs  receiver.rs  sender.rs  shared_receiver.rs  shared_sender.rs
crates/mpz-share-conversion/: Cargo.toml
crates/mpz-share-conversion-core/: Cargo.toml
crates/mpz-share-conversion-core/src/: a2m.rs  ideal.rs  lib.rs  m2a.rs  msgs.rs
crates/mpz-share-conversion/src/: error.rs  ideal.rs  lib.rs  receiver.rs  sender.rs
crates/mpz-zk/: Cargo.toml
crates/mpz-zk-core/: Cargo.toml
crates/mpz-zk-core/src/: lib.rs  test.rs
crates/mpz-zk-core/src/vope/: error.rs  mod.rs  receiver.rs  sender.rs
crates/mpz-zk/src/: lib.rs
crates/mpz-zk/src/vope/: error.rs  mod.rs  receiver.rs  sender.rs
mpz-core/src/: lpn.rs
ot/mpz-ot/: Cargo.toml
ot/mpz-ot-core/src/ferret/: cuckoo.rs  mod.rs  receiver.rs  sender.rs
ot/mpz-ot-core/src/ferret/mpcot/: mod.rs  receiver.rs  receiver_regular.rs  sender.rs  sender_regular.rs
ot/mpz-ot-core/src/ideal/: ideal_spcot.rs
