[package]
name = "mpz-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["sync"]
sync = ["tokio/sync"]
test-utils = ["uid-mux/test-utils"]
ideal = []
rayon = ["dep:rayon"]
force-st = []

[dependencies]
mpz-core.workspace = true

futures.workspace = true
async-trait.workspace = true
pin-project-lite.workspace = true
scoped-futures.workspace = true
thiserror.workspace = true
serio.workspace = true
uid-mux.workspace = true
serde = { workspace = true, features = ["derive"] }
pollster.workspace = true
rayon = { workspace = true, optional = true }
cfg-if.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-util = { workspace = true, features = ["compat"] }
uid-mux = { workspace = true, features = ["test-utils"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
criterion.workspace = true

[[bench]]
name = "context"
harness = false
required-features = ["test-utils", "rayon"]
