[package]
name = "mpz-dynamic-types"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_arrays"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_arrays = { workspace = true, optional = true }
itybity = { workspace = true }
rand = { workspace = true }
arrayvec = "0.7"

[lints]
workspace = true
