[package]
name = "mpz-memory"
version = "0.1.0"
edition = "2021"

[features]
default = ["binary"]
binary = ["dep:mpz-binary-types", "dep:itybity"]
serde = ["dep:serde", "dep:serde_arrays"]

[dependencies]
mpz-binary-types = { workspace = true, optional = true }

itybity = { workspace = true, optional = true }
thiserror.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
serde_arrays = { workspace = true, optional = true }

[lints]
workspace = true
