[package]
name = "mpz-share-conversion-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "mpz_share_conversion_core"

[dependencies]
mpz-fields.workspace = true
mpz-core.workspace = true

rand.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
mpz-ole-core.workspace = true
