[package]
name = "mpz-share-conversion"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "mpz_share_conversion"

[features]
default = []
ideal = ["mpz-common/ideal"]

[dependencies]
mpz-common.workspace = true
mpz-share-conversion-core.workspace = true
mpz-fields.workspace = true
mpz-ole.workspace = true

thiserror.workspace = true
async-trait.workspace = true
serio.workspace = true
rand.workspace = true

[dev-dependencies]
mpz-ole = { workspace = true, features = ["ideal"] }
mpz-common = { workspace = true, features = ["test-utils"] }
mpz-core.workspace = true
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
