[package]
name = "mpz-zk-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[lib]
name = "mpz_zk_core"

[features]
default = ["rayon", "test-utils"]
rayon = ["dep:rayon", "itybity/rayon"]
test-utils = []

[dependencies]
mpz-core.workspace = true
mpz-ot-core.workspace = true
clmul.workspace = true
matrix-transpose.workspace = true

tlsn-utils.workspace = true

rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
derive_builder.workspace = true
itybity.workspace = true
opaque-debug.workspace = true
cfg-if.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
enum-try-as-inner.workspace = true
