[package]
name = "mpz-zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[lib]
name = "mpz_zk"

[features]
default = ["rayon"]
rayon = ["mpz-ot-core/rayon"]
ideal = ["mpz-common/ideal"]

[dependencies]
mpz-core.workspace = true
mpz-zk-core.workspace = true
mpz-common.workspace = true
mpz-cointoss.workspace = true
mpz-ot-core.workspace = true
mpz-ot.workspace = true

tlsn-utils-aio.workspace = true

async-trait.workspace = true
futures.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
rayon = { workspace = true }
itybity.workspace = true
enum-try-as-inner.workspace = true
opaque-debug.workspace = true
serde = { workspace = true, optional = true }
serio.workspace = true
cfg-if.workspace = true

[dev-dependencies]
mpz-common = { workspace = true, features = ["test-utils", "ideal"] }
mpz-ot-core = { workspace = true, features = ["test-utils"] }
rstest = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
